# pyspark_exercises

./: .gitignore  progress.py  pyproject.toml
01_Getting_&_Knowing_Your_Data/Chipotle/: Solutions_PySpark.ipynb
01_Getting_&_Knowing_Your_Data/Occupation/: Solutions_PySpark.ipynb
01_Getting_&_Knowing_Your_Data/World Food Facts/: Solutions_PySpark.ipynb
