[project]
name = "pyspark-exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pyspark[sql]>=3.5.5",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "ruff>=0.11.0",
]
